system/management/dashy/chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app: dashy
    scope: management
spec:
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
        scope: management
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
